Platform 1.24

* TestingHttpClient

  We created a default constructor for TestingHttpClient. The constructed
  TestingHttpClient needs a call to setProcessor(Processor) before it can
  be effectively used.

  We added TestingHttpClient.getRequestCount().

Platform 1.23

* BalancingHttpClient

  When a ResponseHandler throws an exception, the ServiceClient.Failure.Count
  metric incremented is given an additional "handlerException" tag with a
  value of that exception's class.

* [Bug] Fixed the request log's logic for when to use addresses in the
  X-Forwarded-For: header.

  - Ignore X-Forwarded-For: if the connection is from an external IP address.
  - Use the closest (last-listed) external IP address, if any.
  - Use the furthest (first-listed) IP address if all addresses are internal.

* Library Upgrades

  - Jetty to 9.2.12

Platform 1.22

* BalancingHttpClient

  We a created HttpClientBinder.bindBalancingHttpClient(String name,
  Class<? extends Annotation> annotation, Set<URI> baseUris) method for
  binding a BalancingHttpClient with a fixed set of destination URIs.

  We a created HttpClientBinder.bindBalancingHttpClient(String name,
  Class<? extends Annotation> annotation,
  Key<? extends HttpServiceBalancer> balancerKey) method for
  binding a BalancingHttpClient with a custom HttpServiceBalancer.

  We added 499, 598, and 599 to the set of retryable response codes.

* Library Upgrades

  - Joda-time to 2.8

Platform 1.21

* DHE disabled

  We disabled all default-enabled DHE ciphers in both HttpServer and
  JettyHttpClient.

* Future Utilities

  We've added MoreFutures class which contains utility methods for Future and
  the new Java8 CompletableFuture.  For basic future, there are methods for
  fetching the future value with minimal exception handling.  For
  CompletableFuture, there are methods for easily creating futures.  Finally,
  we have added methods for converting to and from Guava ListenableFuture to