@@ -16,7 +16,7 @@ public class TestDecayCounter
 
         DecayCounter counter = new DecayCounter(ExponentialDecay.oneMinute(), ticker);
         counter.add(1);
-        ticker.increment(1, TimeUnit.MINUTES);
+        ticker.elapseTime(1, TimeUnit.MINUTES);
 
         assertTrue(Math.abs(counter.getCount() - 1 / Math.E) < 1e-9);
     }
@@ -28,7 +28,7 @@ public class TestDecayCounter
 
         DecayCounter counter = new DecayCounter(ExponentialDecay.oneMinute(), ticker);
         counter.add(1);
-        ticker.increment(1, TimeUnit.MINUTES);
+        ticker.elapseTime(1, TimeUnit.MINUTES);
         counter.add(2);
 
         double expected = 2 + 1 / Math.E;
