@@ -90,7 +90,7 @@ public class TestSparseTimeStat
             @Override
             public Void call()
             {
-                ticker.increment(10, TimeUnit.MILLISECONDS);
+                ticker.elapseTime(10, TimeUnit.MILLISECONDS);
                 return null;
             }
         });
@@ -112,7 +112,7 @@ public class TestSparseTimeStat
                 @Override
                 public Void call()
                 {
-                    ticker.increment(10, TimeUnit.MILLISECONDS);
+                    ticker.elapseTime(10, TimeUnit.MILLISECONDS);
                     throw new RuntimeException("test exception");
                 }
             });
@@ -133,7 +133,7 @@ public class TestSparseTimeStat
         stat.setBucketIdProvider(bucketIdProvider);
 
         try (BlockTimer ignored = stat.time()) {
-            ticker.increment(10, TimeUnit.MILLISECONDS);
+            ticker.elapseTime(10, TimeUnit.MILLISECONDS);
         }
 
         ++bucketIdProvider.id;
@@ -148,7 +148,7 @@ public class TestSparseTimeStat
         stat.setBucketIdProvider(bucketIdProvider);
 
         try (BlockTimer ignored = stat.time()) {
-            ticker.increment(10, TimeUnit.MILLISECONDS);
+            ticker.elapseTime(10, TimeUnit.MILLISECONDS);
             throw new Exception("test exception");
         }
         catch (Exception ignored) {
@@ -167,7 +167,7 @@ public class TestSparseTimeStat
         stat.setBucketIdProvider(bucketIdProvider);
 
         try (BlockTimer timer = oldStat.time()) {
-            ticker.increment(10, TimeUnit.MILLISECONDS);
+            ticker.elapseTime(10, TimeUnit.MILLISECONDS);
             timer.timeTo(stat);
         }
 
